--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@": ["./*"],
+      "@config": ["./helps/config/**/*.ts"],
+      "@components": ["./components/**/*.ts"],
+      "@middleware": ["./middleware/**/*.ts"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
